--- a/h2-storage/pom.xml
+++ b/h2-storage/pom.xml
@@ -28,6 +28,11 @@
 			<groupId>com.cgi.hexagon</groupId>
 			<artifactId>bonnie-businessrules</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
