--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -27,6 +27,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web-services</artifactId>
+            <version>2.7.3</version>
+        </dependency>
+        <dependency>
             <groupId>com.cgi.hexagon</groupId>
             <artifactId>h2-storage</artifactId>
         </dependency>
@@ -38,14 +43,34 @@
             <groupId>com.cgi.hexagon</groupId>
             <artifactId>bonnie-businessrules</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>wsdl4j</groupId>
+            <artifactId>wsdl4j</artifactId>
+            <version>1.6.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.7.2</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <version>2.5.0</version>
+                <executions>
+                    <execution>
+                        <id>xjc</id>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <sources>
+                        <source>${project.basedir}/src/main/resources/receiver.xsd</source>
+                    </sources>
+                </configuration>
             </plugin>
         </plugins>
     </build>
