--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>starter</module>
         <module>bonnie-rest</module>
         <module>h2-storage</module>
+        <module>kafka-messages</module>
     </modules>
     <packaging>pom</packaging>
 
