--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -43,6 +43,11 @@
             <groupId>com.cgi.hexagon</groupId>
             <artifactId>bonnie-businessrules</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.cgi.hexagon</groupId>
+            <artifactId>kafka-messages</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>wsdl4j</groupId>
