--- a/kafka-messages/pom.xml
+++ b/kafka-messages/pom.xml
@@ -11,13 +11,19 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.cgi.hexagon</groupId>
+            <artifactId>bonnie-businessrules</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
             <version>3.2.1</version>
         </dependency>
         <dependency>
-            <groupId>com.cgi.hexagon</groupId>
-            <artifactId>bonnie-businessrules</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.13.3</version>
         </dependency>
     </dependencies>
 </project>
