--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>kafka-messages</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
 
         <dependency>
             <groupId>wsdl4j</groupId>
