bonnie-12 Shop - Place an order

--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -44,22 +44,20 @@
             <artifactId>bonnie-businessrules</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.cgi.hexagon</groupId>
-            <artifactId>kafka-messages</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.7</version>
         </dependency>
-
         <dependency>
             <groupId>wsdl4j</groupId>
             <artifactId>wsdl4j</artifactId>
             <version>1.6.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+        </dependency>
     </dependencies>
 
     <build>
