--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,13 @@
         <module>starter</module>
         <module>bonnie-rest</module>
         <module>h2-storage</module>
-        <module>kafka-messages</module>
+        <module>communicationPlugIn-Kafka</module>
     </modules>
     <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
-        <spring.version>2.7.2</spring.version>
     </properties>
 
     <dependencyManagement>
