--- a/communicationPlugIn-Kafka/src/main/resources/application.properties
+++ b/communicationPlugIn-Kafka/src/main/resources/application.properties
@@ -15,11 +15,11 @@ spring.kafka.consumer.enable.auto.commit= "false"
 spring.kafka.consumer.isolation.level= "read_committed"
 
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 #spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.producer.bootstrap-server= 127.0.0.1:9092
 spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
