bonnie-12 Shop - Place an order main merge 2st steps add shopId fix shopId

--- a/h2-storage/pom.xml
+++ b/h2-storage/pom.xml
@@ -34,6 +34,11 @@
 			<version>2.13.4</version>
 		</dependency>
 	</dependencies>
+	<dependency>
+		<groupId>org.json</groupId>
+		<artifactId>json</artifactId>
+		<version>20220320</version>
+	</dependency>
 
 	<build>
 		<plugins>
