--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>lombok</artifactId>
             <version>1.18.24</version>
         </dependency>
+        <dependency>
+            <groupId>com.cgi.hexagon</groupId>
+            <artifactId>communicationPlugIn-Kafka</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
