bonnie-12 Shop - Place an order main merge 3rd step ; add shopId; fix shopId; log.info -> log debug; fixing modified tests;

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
         <maven.compiler.target>18</maven.compiler.target>
+        <spring.version>2.7.2</spring.version>
     </properties>
 
     <dependencyManagement>
