--- a/h2-storage/pom.xml
+++ b/h2-storage/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.1-api</artifactId>
+			<version>1.0.0.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
