bonnie-12 Shop - Place an order main merge 4th step ; add shopId; fix shopId; log.info -> log debug; fixing modified tests; fixing Adorján's commits; placementDate added; some comment (I hope all) fixed

--- a/communicationPlugIn-Kafka/src/main/resources/application.properties
+++ b/communicationPlugIn-Kafka/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.bonnie.kafka.topic.order= bonnieOrderTopic
 spring.bonnie.kafka.topic.message= bonnieMessageTopic
 spring.bonnie.dateFormat= "yyyy.MM.dd HH:mm:ss"
 
-#spring.jackson.date-format: yyyy.MM.dd HH:mm:ss
+spring.jackson.date-format: yyyy.MM.dd HH:mm
 
 spring.kafka.consumer.bootstrap-server= 127.0.0.1:9092
 spring.kafka.consumer.group-id= bonnieGroup
