#12 Place an order (#30)
* bonnie-12 Shop - Place an order

* bonnie-12 Shop - Place an order main merge 1st step
add shopOrderId (back)

* bonnie-12 Shop - Place an order main merge 2st steps
fix shopOrderId

* bonnie-12 Shop - Place an order main merge 3rd step ;
log.info -> log debug;
fixing modified tests;

* bonnie-12 Shop - Place an order main merge 4th step ;
fixing Adorján's commits

* bonnie-12 Shop - Place an order main merge 4th step ;
placementDate added;

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>bonnie-rest</module>
         <module>h2-storage</module>
         <module>kafka-messages</module>
+        <module>communicationPlugIn-Kafka</module>
     </modules>
     <packaging>pom</packaging>
 
