--- a/bonnie-rest/pom.xml
+++ b/bonnie-rest/pom.xml
@@ -24,5 +24,10 @@
 			<version>1.0-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+		</dependency>
 	</dependencies>
 </project>
