--- a/kafka-messages/pom.xml
+++ b/kafka-messages/pom.xml
@@ -9,6 +9,12 @@
 
     <artifactId>kafka-messages</artifactId>
 
+    <properties>
+        <maven.compiler.source>18</maven.compiler.source>
+        <maven.compiler.target>18</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.cgi.hexagon</groupId>
@@ -21,9 +27,12 @@
             <version>3.2.1</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.13.3</version>
         </dependency>
     </dependencies>
 </project>
