--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>bonnie-parent</artifactId>
-        <groupId>com.cgi.hexagon</groupId>
+        <groupId>com.cgi.bonnie</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -22,19 +22,19 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.cgi.hexagon</groupId>
+            <groupId>com.cgi.bonnie</groupId>
             <artifactId>h2-storage</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.cgi.hexagon</groupId>
+            <groupId>com.cgi.bonnie</groupId>
             <artifactId>bonnie-rest</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.cgi.hexagon</groupId>
+            <groupId>com.cgi.bonnie</groupId>
             <artifactId>bonnie-businessrules</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.cgi.hexagon</groupId>
+            <groupId>com.cgi.bonnie</groupId>
             <artifactId>communicationPlugIn-Kafka</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
