--- a/bonnie-rest/pom.xml
+++ b/bonnie-rest/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.cgi.hexagon</groupId>
+		<groupId>com.cgi.bonnie</groupId>
 		<artifactId>bonnie-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
@@ -19,7 +19,7 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.cgi.hexagon</groupId>
+			<groupId>com.cgi.bonnie</groupId>
 			<artifactId>bonnie-businessrules</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
