--- a/communicationPlugIn-Kafka/pom.xml
+++ b/communicationPlugIn-Kafka/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>bonnie-parent</artifactId>
-        <groupId>com.cgi.hexagon</groupId>
+        <groupId>com.cgi.bonnie</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -23,7 +23,7 @@
             <artifactId>spring-kafka</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.cgi.hexagon</groupId>
+            <groupId>com.cgi.bonnie</groupId>
             <artifactId>bonnie-businessrules</artifactId>
         </dependency>
         <dependency>
