--- a/bonnie-businessrules/pom.xml
+++ b/bonnie-businessrules/pom.xml
@@ -4,18 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>bonnie-parent</artifactId>
-        <groupId>com.cgi.hexagon</groupId>
+        <groupId>com.cgi.bonnie</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>bonnie-businessrules</artifactId>
+    <artifactId>businessrules</artifactId>
+    <name>businessrules</name>
     <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.24</version>
-        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -36,7 +32,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.0</version>
         </dependency>
     </dependencies>
 
