--- a/bonnie-rest/pom.xml
+++ b/bonnie-rest/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.cgi.hexagon</groupId>
+		<groupId>com.cgi.bonnie</groupId>
 		<artifactId>bonnie-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>bonnie-rest</artifactId>
-	<name>bonnie-rest</name>
+	<artifactId>rest</artifactId>
+	<name>rest</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>18</java.version>
@@ -19,15 +19,9 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.cgi.hexagon</groupId>
-			<artifactId>bonnie-businessrules</artifactId>
+			<groupId>com.cgi.bonnie</groupId>
+			<artifactId>businessrules</artifactId>
 			<version>1.0-SNAPSHOT</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.24</version>
 		</dependency>
 	</dependencies>
 </project>
