--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -9,12 +9,11 @@ server.port=8082
 
 
 spring.bonnie.kafka.topic.order= bonnieOrderTopic
-#spring.bonnie.kafka.topic.json= bonnieJsonTopic
 spring.bonnie.kafka.topic.message= bonnieMessageTopic
 spring.bonnie.dateFormat= "yyyy.MM.dd HH:mm:ss"
 spring.jackson.date-format: yyyy.MM.dd HH:mm
 
-spring.kafka.consumer.bootstrap-server= 127.0.0.1:9092
+spring.kafka.bootstrap-servers= 127.0.0.1:9092
 spring.kafka.consumer.group-id= bonnieGroup
 
 spring.kafka.consumer.auto-offset-reset= earliest
@@ -23,11 +22,6 @@ spring.kafka.consumer.isolation.level= "read_committed"
 
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
-spring.kafka.producer.bootstrap-server= 127.0.0.1:9092
-spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
-#spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
 
