--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -31,3 +31,6 @@ spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.Stri
 spring.kafka.producer.value-serializer= org.apache.kafka.common.serialization.StringSerializer
 #spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
 
+spring.security.oauth2.client.registration.facebook.client-id=579437707268071
+spring.security.oauth2.client.registration.facebook.client-secret=7656e20008799392ba997c4a6cb3863b
+spring.security.oauth2.client.registration.facebook.scope=email, public_profile
