--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>bonnie-businessrules</module>
+        <module>authentication</module>
         <module>starter</module>
         <module>bonnie-rest</module>
         <module>h2-storage</module>
@@ -73,7 +74,7 @@
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>com.cgi.hexagon</groupId>
+                <groupId>com.cgi.bonnie</groupId>
                 <artifactId>authentication</artifactId>
                 <version>${project.version}</version>
                 <scope>compile</scope>
