--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -39,7 +39,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.cgi.hexagon</groupId>
+            <groupId>com.cgi.bonnie</groupId>
             <artifactId>authentication</artifactId>
         </dependency>
         <dependency>
