--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -17,10 +17,10 @@
     </properties>
 
     <dependencies>
-        <dependency>
+        <!--dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>com.cgi.bonnie</groupId>
             <artifactId>h2-storage</artifactId>
@@ -39,7 +39,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.cgi.hexagon</groupId>
+            <groupId>com.cgi.bonnie</groupId>
             <artifactId>authentication</artifactId>
         </dependency>
         <dependency>
