--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -23,5 +23,5 @@ spring.kafka.consumer.isolation.level= "read_committed"
 spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
-
+springdoc.swagger-ui.path=/swagger-ui.html
 
