Generate openapi & angular client

--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.security.oauth2.client.registration.facebook.client-id=${client-id}
 spring.security.oauth2.client.registration.facebook.client-secret=${client-secret}
 spring.security.oauth2.client.registration.facebook.scope=email, public_profile
+
+springdoc.swagger-ui.path=/swagger-ui.html
+
