--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -15,16 +15,12 @@ spring.jackson.date-format: yyyy.MM.dd HH:mm
 
 spring.kafka.bootstrap-servers= 127.0.0.1:9092
 spring.kafka.consumer.group-id= bonnieGroup
-
-spring.kafka.consumer.auto-offset-reset= earliest
-spring.kafka.consumer.enable.auto.commit= "false"
-spring.kafka.consumer.isolation.level= "read_committed"
-
-spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable.auto.commit="false"
+spring.kafka.consumer.isolation.level="read_committed"
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
-
-
-spring.security.oauth2.client.registration.facebook.client-id=579437707268071
-spring.security.oauth2.client.registration.facebook.client-secret=7656e20008799392ba997c4a6cb3863b
+spring.security.oauth2.client.registration.facebook.client-id=${client-id}
+spring.security.oauth2.client.registration.facebook.client-secret=${client-secret}
 spring.security.oauth2.client.registration.facebook.scope=email, public_profile
