--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -18,10 +18,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.cgi.bonnie</groupId>
             <artifactId>h2-storage</artifactId>
         </dependency>
@@ -39,9 +35,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.cgi.bonnie</groupId>
+            <artifactId>authentication</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.3</version>
         </dependency>
     </dependencies>
 </project>
