--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -28,3 +28,5 @@ spring.security.oauth2.client.registration.facebook.scope=email, public_profile
 
 springdoc.swagger-ui.path=/swagger-ui.html
 
+bonnie.authentication.cors.allowed.origins=http://localhost:4200
+bonnie.authentication.oauth.redirect.url=http://localhost:4200/my-orders
