test Jenkins timeout

--- a/bonnie-rest/pom.xml
+++ b/bonnie-rest/pom.xml
@@ -62,6 +62,8 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>
+                    <wait>1000</wait>
+                    <maxAttempts>360</maxAttempts>
                     <mainClass>com.cgi.bonnie.RestStarter</mainClass>
                 </configuration>
                 <executions>
