--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -32,6 +32,7 @@
         <dependency>
             <groupId>com.cgi.bonnie</groupId>
             <artifactId>businessrules</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
