--- a/communicationPlugIn-Kafka/pom.xml
+++ b/communicationPlugIn-Kafka/pom.xml
@@ -33,6 +33,7 @@
         <dependency>
             <groupId>com.cgi.bonnie</groupId>
             <artifactId>businessrules</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
