--- a/h2-storage/pom.xml
+++ b/h2-storage/pom.xml
@@ -30,6 +30,7 @@
         <dependency>
             <groupId>com.cgi.bonnie</groupId>
             <artifactId>businessrules</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
