--- a/bonnie-rest/pom.xml
+++ b/bonnie-rest/pom.xml
@@ -117,6 +117,7 @@
                 <version>3.0.2</version>
                 <configuration>
                     <overwrite>true</overwrite>
+                    <skip>${skipCopy}</skip>
                     <outputDirectory>${project.build.directory}\..\..\frontend\generated-client</outputDirectory>
                     <resources>
                         <resource>
