--- a/Dockerfile-frontend
+++ b/Dockerfile-frontend
@@ -1,2 +1,3 @@
 FROM httpd:2.4
 COPY ./frontend/dist/bonnie-frontend/ /usr/local/apache2/htdocs/
+COPY ./frontend/.htaccess /usr/local/apache2/htdocs/.htaccess
