fixed docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,9 +37,9 @@ services:
     environment:
       SPRING_KAFKA_BOOTSTRAP-SERVERS: kafka:9092
       SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/
-      SPRING_DATASOURCE_USERNAME+${DB_USERNAME}"
-      SPRING_DATASOURCE_PASSWORD: "${JASYPT_DB_DECRYPT_PWD}"
-      JASYPT_ENCRYPTOR_PASSWORD: "${JASYPT_DB_CONNECTION_PWD}"
+      SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${JASYPT_DB_DECRYPT_PWD}
+      JASYPT_ENCRYPTOR_PASSWORD: ${JASYPT_DB_CONNECTION_PWD}
     depends_on:
       - kafka
       - postgres_storage
