Support H2 Database as well.

--- a/starter/src/main/resources/application-devserver.properties
+++ b/starter/src/main/resources/application-devserver.properties
@@ -2,3 +2,28 @@ bonnie.authentication.cors.allowed.origins=http://bonnee.eu,https://bonnee.eu,ht
 bonnie.authentication.oauth.redirect.url=https://bonnee.eu/my-orders
 
 server.forward-headers-strategy=NATIVE
+
+#PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.username=doodle
+spring.datasource.password=ENC(qd3y+Cxh1y5LvGYmb5hJ+w==)
+
+spring.datasource.initialization-mode=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.hikari.schema=public
+spring.datasource.continue-on-error=true
+
+spring.datasource.hikari.connectionTimeout=15000
+spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.show-sql=true
+
+spring.flyway.schemas=public
+spring.flyway.locations=classpath:db/doodle
+
+jasypt.encryptor.algorithm= PBEWithMD5AndDES
+jasypt.encryptor.iv-generator-classname: org.jasypt.iv.NoIvGenerator
