--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
                 <artifactId>postgresql</artifactId>
                 <scope>runtime</scope>
             </dependency>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>2.1.214</version>
+            </dependency>
             <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
